ingress-alb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing  # Atau internal, sesuai kebutuhan Anda
    alb.ingress.kubernetes.io/target-type: instance          # Atau instance, sesuai kebutuhan Anda
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'  # Contoh jika menggunakan HTTPS
spec:
  rules:
    - host: test-k8s-nginx.apelweb.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
