ingress-node-port.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30001  # Ganti dengan port NodePort yang diinginkan
